--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
+
 body{
     padding: 20px;
+    font-family: 'Pangolin', cursive;
 }
